--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,12 +8,13 @@
     <color name="searchFrag">#6282DD</color>
     <color name="favFrag">#388E3C</color>
     <color name="infoFrag">#C2185B</color>
-    <color name="rating0">#FF0000</color>
-    <color name="rating1">#D32F2F</color>
+    <color name="rating0">#921414</color>
+    <color name="rating1">#CE2323</color>
     <color name="rating2">#E64A19</color>
     <color name="rating3">#F57C00</color>
     <color name="rating4">#689F38</color>
     <color name="rating5">#388E3C</color>
+    <color name="ratingDue">#6F707070</color>
     <color name="addToFavColor">#AD388E3C</color>
     <color name="removeFromFavColor">#ADD32F2F</color>
 </resources>
