--- a/app/src/main/res/layout/fragment_address_filter.xml
+++ b/app/src/main/res/layout/fragment_address_filter.xml
@@ -7,20 +7,41 @@
     tools:context=".AddressFilter">
 
     <EditText
-        android:id="@+id/locationEditText"
-        android:layout_width="241dp"
-        android:layout_height="45dp"
+        android:id="@+id/addressEditText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="@string/enterAddress"
         android:inputType="textPersonName"
         android:textAlignment="textStart"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="@+id/authoritiesSpinner"
+        app:layout_constraintStart_toStartOf="@+id/localAuthorityLabel"
+        app:layout_constraintTop_toBottomOf="@+id/authoritiesSpinner" />
+
+    <Spinner
+        android:id="@+id/authoritiesSpinner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/localAuthorityLabel"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/localAuthorityLabel"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="@string/local_authority_city"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@+id/authoritiesSpinner"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/authoritiesSpinner" />
+
 </android.support.constraint.ConstraintLayout>
