--- a/app/src/main/res/layout/fragment_single_result.xml
+++ b/app/src/main/res/layout/fragment_single_result.xml
@@ -75,7 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="ratedOn"
+        android:text="@string/date_of_last_inspection"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
