--- a/app/src/main/res/layout/single_result_layout.xml
+++ b/app/src/main/res/layout/single_result_layout.xml
@@ -24,53 +24,50 @@
         android:id="@+id/resultNameText"
         android:layout_width="174dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
+        android:layout_marginStart="5dp"
         android:layout_marginEnd="0dp"
         android:layout_toStartOf="@+id/moreInfoText"
         android:layout_toEndOf="@+id/ratingText"
         android:text="Name, Info"
-        android:textSize="15sp" />
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/resultAddressText"
         android:layout_width="187dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/resultNameText"
+        android:layout_alignStart="@+id/resultNameText"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
         android:layout_marginEnd="0dp"
         android:layout_toStartOf="@+id/moreInfoText"
-        android:layout_toEndOf="@+id/ratingText"
         android:text="Address"
         android:textSize="12sp" />
 
     <TextView
         android:id="@+id/moreInfoText"
-        android:layout_width="59dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/addToFav"
-        android:layout_marginEnd="0dp"
+        android:layout_alignBottom="@+id/labelNext"
+        android:layout_marginEnd="32dp"
         android:layout_marginBottom="0dp"
-        android:layout_toStartOf="@+id/addToFav"
+        android:layout_toStartOf="@+id/labelNext"
         android:text="moreInfo"
-        android:textSize="10sp" />
+        android:textSize="14sp" />
 
-    <Button
-        android:id="@+id/addToFav"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
-        android:layout_marginEnd="0dp"
-        android:layout_toStartOf="@+id/moreInfoButton"
-        android:background="@android:drawable/btn_star_big_off" />
-
-    <Button
-        android:id="@+id/moreInfoButton"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
+    <TextView
+        android:id="@+id/labelNext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/ratingText"
+        android:layout_alignBottom="@+id/ratingText"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="0dp"
         android:text=">"
-        android:onClick="onClick"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textSize="40sp"
+        android:textStyle="normal" />
 
 </RelativeLayout>
